Initial commit for weather API project

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Openweather</title>
+    <title>weather API</title>
 </head>
 <body>
      <form id="weatherForm">
@@ -12,7 +12,7 @@
   <input type="text" placeholder="Enter latitude" id="latitude"><br><br>
   <button type="submit" id="getWeather">Get Weather</button>
 </form>
-<div id="weatherResult" style="margin-top: 20px; white-space: pre-line;"></div>
-<script src="weather.js"></script>
+<div id="weatherResult" style="margin-top: 20px; white-space: pre-line;">Display info.</div>
+<script src="index.js"></script>
 </body>
 </html>
